--- a/hearth/index.html
+++ b/hearth/index.html
@@ -300,6 +300,7 @@
             </div>
         </section>
         <section class="menu">
+            <h2></h2>
             <div class="container">
                 <div class="menu__wrapper-top">
                     <a href="#" class="menu__item menu__item_big">
@@ -890,11 +891,13 @@
             <form class="popup__container">
                 <input name="user_name" type="text" class="popup__input" placeholder="Введите ваше имя">
                 <input name="user_tel" type="tel" class="popup__input" placeholder="Введите ваш телефон">
+                <label class="popup__label">
+                    <input type="checkbox" required><span class="popup__checkbox"></span><sapn class="popup__text">Ознакомлен и согласен с <a href="#" target="_blank" rel="noopener noreferrer">условиями политики конфиденциальности</a></sapn>
+                </label>
                 <button type="submit" class="button button_promo js-form-send">Отправить</button>
             </form>
         </div>
     </div>
 
-    
 </body>
 </html>
