--- a/hearth/index.html
+++ b/hearth/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="./css/swiper-bundle.min.css">
     <link rel="stylesheet" href="./css/fonts.css">
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/media.css" media="screen and (max-width: 1300px)">
-    <script src="./js/swiper-bundle.min.js" defer async></script>
-    <script src="./js/main.js" defer async></script>
+    <link rel="stylesheet" href="./css/media.css">
+    <script src="./js/swiper-bundle.min.js" defer></script>
+    <script src="./js/main.js" defer></script>
     <title>Пекарня очаг</title>
 </head>
 <body>
