--- a/dacha-project/index.html
+++ b/dacha-project/index.html
@@ -186,6 +186,33 @@
                         <div class="swiper-slide"><img src="./img/portfolio/portfolio_18.jpg" alt="Фото нашего проекта" class="portfolio__img"></div>
                         <div class="swiper-slide"><img src="./img/portfolio/portfolio_19.jpg" alt="Фото нашего проекта" class="portfolio__img"></div>
                     </div>
+                    <a href="#" class="portfolio__control portfolio__control_prev"></a>
+                    <a href="#" class="portfolio__control portfolio__control_next"></a>
+                </div>
+                <div class="portfolio__container portfolio__container_hidden">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide"><img src="./img/portfolio/portfolio_1.jpg" alt="Фото нашего проекта" class="portfolio__img"></div>
+                        <div class="swiper-slide"><img src="./img/portfolio/portfolio_2.jpg" alt="Фото нашего проекта" class="portfolio__img"></div>
+                        <div class="swiper-slide"><img src="./img/portfolio/portfolio_3.jpg" alt="Фото нашего проекта" class="portfolio__img"></div>
+                        <div class="swiper-slide"><img src="./img/portfolio/portfolio_4.jpg" alt="Фото нашего проекта" class="portfolio__img"></div>
+                        <div class="swiper-slide"><img src="./img/portfolio/portfolio_5.jpg" alt="Фото нашего проекта" class="portfolio__img"></div>
+                        <div class="swiper-slide"><img src="./img/portfolio/portfolio_6.jpg" alt="Фото нашего проекта" class="portfolio__img"></div>
+                        <div class="swiper-slide"><img src="./img/portfolio/portfolio_7.jpg" alt="Фото нашего проекта" class="portfolio__img"></div>
+                        <div class="swiper-slide"><img src="./img/portfolio/portfolio_8.jpg" alt="Фото нашего проекта" class="portfolio__img"></div>
+                        <div class="swiper-slide"><img src="./img/portfolio/portfolio_9.jpg" alt="Фото нашего проекта" class="portfolio__img"></div>
+                        <div class="swiper-slide"><img src="./img/portfolio/portfolio_10.jpg" alt="Фото нашего проекта" class="portfolio__img"></div>
+                        <div class="swiper-slide"><img src="./img/portfolio/portfolio_11.jpg" alt="Фото нашего проекта" class="portfolio__img"></div>
+                        <div class="swiper-slide"><img src="./img/portfolio/portfolio_12.jpg" alt="Фото нашего проекта" class="portfolio__img"></div>
+                        <div class="swiper-slide"><img src="./img/portfolio/portfolio_13.jpg" alt="Фото нашего проекта" class="portfolio__img"></div>
+                        <div class="swiper-slide"><img src="./img/portfolio/portfolio_14.jpg" alt="Фото нашего проекта" class="portfolio__img"></div>
+                        <div class="swiper-slide"><img src="./img/portfolio/portfolio_15.jpg" alt="Фото нашего проекта" class="portfolio__img"></div>
+                        <div class="swiper-slide"><img src="./img/portfolio/portfolio_16.jpg" alt="Фото нашего проекта" class="portfolio__img"></div>
+                        <div class="swiper-slide"><img src="./img/portfolio/portfolio_17.jpg" alt="Фото нашего проекта" class="portfolio__img"></div>
+                        <div class="swiper-slide"><img src="./img/portfolio/portfolio_18.jpg" alt="Фото нашего проекта" class="portfolio__img"></div>
+                        <div class="swiper-slide"><img src="./img/portfolio/portfolio_19.jpg" alt="Фото нашего проекта" class="portfolio__img"></div>
+                    </div>
+                    <a href="#" class="portfolio__control portfolio__control_prev"></a>
+                    <a href="#" class="portfolio__control portfolio__control_next"></a>
                 </div>
                 <div class="section__btn-wrap">
                     <button class="button button_portfolio">Показать еще</button>
@@ -1663,5 +1690,30 @@
             </div>
         </div>
     </footer>
+
+    <div class="popup__wrapper js-common-popup">
+        <span class="popup__close"></span><span class="popup__title">Заполните форму перезвоним в течении 5 минут</span>
+        <form class="popup__body">
+            <input type="tel" name="user_tel">
+            <button>Заказать звонок</button>
+        </form>
+    </div>
+
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript" >
+        (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+        m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+        (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+    
+        ym(67488328, "init", {
+            clickmap:true,
+            trackLinks:true,
+            accurateTrackBounce:true,
+            webvisor:true
+        });
+    </script>
+    <noscript><div><img src="https://mc.yandex.ru/watch/67488328" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+    <!-- /Yandex.Metrika counter -->
+ 
 </body>
 </html>
