--- a/hearth/index.html
+++ b/hearth/index.html
@@ -150,7 +150,7 @@
                 <div class="banner__logo-wrap">
                     <img loading="lazy" src="./img/logo.svg" alt="Логотип" class="banner__logo">
                 </div>
-                <h1 class="banner__title">Лучшие осетинские пироги и пицца в Москве</h1>
+                <h1 class="banner__title">Лучшие осетинские пироги&nbspи&nbspпицца в Москве</h1>
             </div>
         </div>
     </section>
@@ -866,7 +866,7 @@
         <div class="footer__bottom">
             <div class="container">
                 <div class="footer__bottom-wrap">
-                    <span class="footer__copyright">2020 © Пекарня Очаг<br>1-я Бухвостова 12/11 корпус 4 Преображенская Площадь<br><span> ОГРН 316151300074546</span></span>
+                    <span class="footer__copyright">2020 © Пекарня Очаг<br><span class="footer__addr">1-я Бухвостова 12/11 корпус 4 Преображенская Площадь</span><br><span> ОГРН 316151300074546</span></span>
                     <div class="footer__socials">
                         <a href="#" class="footer__social">
                             <svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" viewBox="0 0 24 24">
@@ -908,7 +908,7 @@
                 <input name="user_name" type="text" class="popup__input" placeholder="Введите ваше имя">
                 <input name="user_tel" type="tel" class="popup__input" placeholder="Введите ваш телефон">
                 <label class="popup__label">
-                    <input type="checkbox" required><span class="popup__checkbox"></span><sapn class="popup__text">Ознакомлен и согласен с <a href="#" target="_blank" rel="noopener noreferrer">условиями политики конфиденциальности</a></sapn>
+                    <input type="checkbox" required><span class="popup__checkbox"></span><span class="popup__text">Ознакомлен и согласен с <a href="#" target="_blank" rel="noopener noreferrer">условиями политики конфиденциальности</a></span>
                 </label>
                 <button type="submit" class="button button_promo js-form-send">Отправить</button>
             </form>
