Close 2 the end

--- a/dacha-project/index.html
+++ b/dacha-project/index.html
@@ -64,7 +64,7 @@
         </nav>
     </div>
     <main class="main">
-        <section class="banner">
+        <section id="banner" class="banner">
             <div class="container">
                 <div class="banner__body">
                     <h1 class="section__title">СТРОИМ КАРКАСНЫЕ ДАЧНЫЕ/САДОВЫЕ ДОМИКИ И БАНИ ДО 100 М2 ПО <span class="text_orange">СКАНДИНАВСКОЙ</span> И <span class="text_orange">КАНАДСКОЙ</span> ТЕХНОЛОГИИ ПЛАТФОРМЕННОГО ТИПА С 1998 ГОДА</h1>
@@ -89,7 +89,7 @@
                 </div>
             </div>
         </section>
-        <section class="examples">
+        <section id="examples" class="examples">
             <div class="container">
                 <h2 class="section__title text_ttu text_tac no-adaptiv"><span class="text_orange">Какие дома</span> мы&nbspстроим</h2>
                 <div class="examples__container">
@@ -297,7 +297,7 @@
                 </div>
             </div>
         </section>
-        <section class="count">
+        <section id="count" class="count">
             <img src="./img/book.png" class="count__book">
             <img src="./img/circle.png" class="count__circle">
             <img src="./img/wood_1.png" class="count__wood_1">
@@ -324,7 +324,7 @@
                 </div>
             </div>
         </section>
-        <section class="materials">
+        <section id="materials" class="materials">
             <img src="./img/niples_2.png" alt="" class="materials__niples">
             <img src="./img/wood_3.png" alt="" class="materials__wood">
             <div class="container">
@@ -349,7 +349,7 @@
                         <td>+</td>
                     </tr>
                     <tr>
-                        <td>Черновой пол доска 100 х 20мм камерной сушки </td>
+                        <td>Черновой пол доска 100 х 20мм камерной сушки</td>
                         <td>-</td>
                         <td>+</td>
                         <td>+</td>
@@ -375,8 +375,8 @@
                     <tr>
                         <td>Капитальные стены - дома доска 100 х 50мм камерной сушки</td>
                         <td>+</td>
-                        <td>-</td>
-                        <td>-</td>
+                        <td>+</td>
+                        <td>+</td>
                     </tr>
                     <tr>
                         <td>Каркас перегородок доска 100 х 50мм камерной сушки</td>
@@ -411,14 +411,14 @@
                     <tr>
                         <td>Отделка внутри: Имитация бруса камерной сушки</td>
                         <td>-</td>
-                        <td>+</td>
+                        <td>-</td>
                         <td>+</td>
                     </tr>
                     <tr>
                         <td>Кровля Мет. Черепица - Grand Line 0.45мм</td>
                         <td>+</td>
-                        <td>-</td>
-                        <td>-</td>
+                        <td>+</td>
+                        <td>+</td>
                     </tr>
                     <tr>
                         <td>Оконные блоки ПВХ 2х камерные VEKA</td>
@@ -429,49 +429,49 @@
                     <tr>
                         <td>Двери Филёнчатые согласно проекту</td>
                         <td>-</td>
-                        <td>+</td>
+                        <td>-</td>
                         <td>+</td>
                     </tr>
                     <tr>
                         <td>Оконные и дверные проёмы отделываются обналичником с заполнением пеной</td>
                         <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
+                        <td>+</td>
+                        <td>+</td>
                     </tr>
                     <tr>
                         <td>Отделка углов, пола, потолка, стен внутри дома плинтус </td>
                         <td>-</td>
-                        <td>+</td>
+                        <td>-</td>
                         <td>+</td>
                     </tr>
                     <tr>
                         <td>Терраса - согласно проекту</td>
                         <td>+</td>
-                        <td>-</td>
-                        <td>-</td>
+                        <td>+</td>
+                        <td>+</td>
                     </tr>
                     <tr>
                         <td>Ограждение на террасе и ступени при входе</td>
                         <td>-</td>
-                        <td>+</td>
+                        <td>-</td>
                         <td>+</td>
                     </tr>
                 </table>
                 <table class="materials__table materials__table_hidden" cellspacing="0">
                     <tr>
-                        <th>Комплектация дом до 16 - 50 кв.м</th>
+                        <th>комплектация дом 50 - 100кв.м</th>
                         <th>Каркас под крышу + отделка фасада</th>
                         <th>Тёплый контур + отделка фасада</th>
                         <th>Дом с отделкой под ключ</th>
                     </tr>
                     <tr>
-                        <td>Основание дома двойное из бруса 100 х 150мм + антисептирование</td>
+                        <td>основание дома строенная доска 200 х 50мм + антисептирование</td>
                         <td>+</td>
                         <td>+</td>
                         <td>+</td>
                     </tr>
                     <tr>
-                        <td>Половые балки доска 150 х 50мм камерной сушки</td>
+                        <td>Цокольное перекрытие доска 200 х 50мм камерной сушки</td>
                         <td>+</td>
                         <td>+</td>
                         <td>+</td>
@@ -489,22 +489,22 @@
                         <td>+</td>
                     </tr>
                     <tr>
-                        <td>Утеппление: пол - 150мм, стены - 100мм, потолок - 150мм, перегородки - 100мм ROCKWOOL Лайт Баттс Скандик </td>
+                        <td>Утеппление: пол - 200мм, стены - 150мм, потолок - 200мм, перегородки - 100мм  ROCKWOOL Лайт Баттс Скандик</td>
                         <td>-</td>
                         <td>+</td>
                         <td>+</td>
                     </tr>
                     <tr>
-                        <td>Чистовой пол в доме и на террасе шпунт 28мм камерной сушки</td>
+                        <td>Чистовой пол в доме и на террасе шпунт 35мм + вентзазор 20мм камерной сушки</td>
                         <td>-</td>
-                        <td>+</td>
+                        <td>-</td>
                         <td>+</td>
                     </tr>
                     <tr>
-                        <td>Капитальные стены - дома доска 100 х 50мм камерной сушки</td>
+                        <td>Капитальные стены - дома доска 150 х 50мм камерной сушки</td>
                         <td>+</td>
-                        <td>-</td>
-                        <td>-</td>
+                        <td>+</td>
+                        <td>+</td>
                     </tr>
                     <tr>
                         <td>Каркас перегородок доска 100 х 50мм камерной сушки</td>
@@ -513,13 +513,13 @@
                         <td>+</td>
                     </tr>
                     <tr>
-                        <td>Потолочные балки доска 150 х 50мм камерной сушки</td>
+                        <td>Чердачное перекрытие доска 200 х 50мм камерной сушки</td>
                         <td>+</td>
                         <td>+</td>
                         <td>+</td>
                     </tr>
                     <tr>
-                        <td>Стропильная система + ригели на карнизы доска  150 х 50мм камерной сушки</td>
+                        <td>Стропильная система + ригели на карнизы  доска  200 х 50мм камерной сушки</td>
                         <td>+</td>
                         <td>+</td>
                         <td>+</td>
@@ -531,22 +531,22 @@
                         <td>+</td>
                     </tr>
                     <tr>
-                        <td>Внешняя отделка стен: Имитация бруса камерной сушки </td>
+                        <td>Внешняя отделка стен: Имитация бруса камерной сушки + вентзазор 20мм + ветрозащита ISOPLAAT 12мм</td>
                         <td>+</td>
                         <td>+</td>
                         <td>+</td>
                     </tr>
                     <tr>
-                        <td>Отделка внутри: Имитация бруса камерной сушки</td>
+                        <td>Отделка внутри: Имитация бруса + вентзазор 20мм камерной сушки</td>
                         <td>-</td>
-                        <td>+</td>
+                        <td>-</td>
                         <td>+</td>
                     </tr>
                     <tr>
-                        <td>Кровля Мет. Черепица - Grand Line 0.45мм</td>
+                        <td>Отделка сауны вагонка - Осина + вентзазор 20мм камерной сушки</td>
+                        <td>-</td>
                         <td>+</td>
-                        <td>-</td>
-                        <td>-</td>
+                        <td>+</td>
                     </tr>
                     <tr>
                         <td>Оконные блоки ПВХ 2х камерные VEKA</td>
@@ -557,26 +557,32 @@
                     <tr>
                         <td>Двери Филёнчатые согласно проекту</td>
                         <td>-</td>
+                        <td>-</td>
+                        <td>+</td>
+                    </tr>
+                    <tr>
+                        <td>Входная дверь металлическая (утеплённая) Россия ПВХ 2х камерная VEKA согласно проекту</td>
+                        <td>-</td>
                         <td>+</td>
                         <td>+</td>
                     </tr>
                     <tr>
                         <td>Оконные и дверные проёмы отделываются обналичником с заполнением пеной</td>
                         <td>-</td>
-                        <td>-</td>
-                        <td>-</td>
+                        <td>+</td>
+                        <td>+</td>
                     </tr>
                     <tr>
                         <td>Отделка углов, пола, потолка, стен внутри дома плинтус </td>
                         <td>-</td>
-                        <td>+</td>
+                        <td>-</td>
                         <td>+</td>
                     </tr>
                     <tr>
                         <td>Терраса - согласно проекту</td>
                         <td>+</td>
-                        <td>-</td>
-                        <td>-</td>
+                        <td>+</td>
+                        <td>+</td>
                     </tr>
                     <tr>
                         <td>Ограждение на террасе и ступени при входе</td>
@@ -1261,7 +1267,7 @@
                 </div>
             </div>
         </section>
-        <section class="projects">
+        <section id="projects" class="projects">
             <div class="container">
                 <h2 class="section__title">НАШИ типовые <sapn class="text_orange">проекты</sapn> дачных домов</h2>
                 <div class="projects__buttons">
@@ -1663,11 +1669,11 @@
                 <div class="footer__col">
                     <nav class="footer__nav">
                         <ul class="footer__list">
-                            <li><a href="#" class="footer__text">Главная</a></li>
-                            <li><a href="#" class="footer__text">Фото домов</a></li>
-                            <li><a href="#" class="footer__text">Материалы</a></li>
-                            <li><a href="#" class="footer__text">Расчет стоимости</a></li>
-                            <li><a href="#" class="footer__text">Типовые проекты</a></li>
+                            <li><a href="#banner" class="footer__text js-scroll-link">Главная</a></li>
+                            <li><a href="#examples" class="footer__text js-scroll-link">Фото домов</a></li>
+                            <li><a href="#materials" class="footer__text js-scroll-link">Материалы</a></li>
+                            <li><a href="#count" class="footer__text js-scroll-link">Расчет стоимости</a></li>
+                            <li><a href="#projects" class="footer__text js-scroll-link">Типовые проекты</a></li>
                         </ul>
                     </nav>
                 </div>
